// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OtherLoanAmountField /> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE gQzhKx"
    id="testForm"
  >
    <div
      class="sc-fujyUd curuhY"
    >
      <input
        class="sc-kEqYlL ddptCy"
        id="otherLoanAmountField"
        name="name"
        placeholder="Kwota obecnych zobowiązań finansowych"
        type="text"
        value="test"
      />
      <span
        class="sc-dIsAE ccvseT"
      >
        PLN
      </span>
      <span
        class="sc-jrsJCI eQDYwE"
      >
        Podany kwota jest nieprawidłowa
      </span>
    </div>
  </form>
</div>
`;

exports[`<OtherLoanAmountField /> matches snapshot 1`] = `
<input
  class="sc-kEqYlL ggqeAX"
  id="otherLoanAmountField"
  name="name"
  placeholder="Kwota obecnych zobowiązań finansowych"
  type="text"
  value=""
/>
`;

exports[`<OtherLoanAmountField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE gQzhKx"
    id="testForm"
  >
    <div
      class="sc-fujyUd curuhY"
    >
      <label
        for="name"
      >
        Test
      </label>
      <input
        class="sc-kEqYlL ddptCy"
        id="otherLoanAmountField"
        label="Test"
        name="name"
        placeholder="Kwota obecnych zobowiązań finansowych*"
        required=""
        type="text"
        value=""
      />
      <span
        class="sc-dIsAE ccvseT"
      >
        PLN
      </span>
      <span
        class="sc-jrsJCI eQDYwE"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<OtherLoanAmountField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE gQzhKx"
    id="testForm"
  >
    <div
      class="sc-fujyUd curuhY"
    >
      <label
        for="name"
      >
        Test
      </label>
      <input
        class="sc-kEqYlL ggqeAX"
        id="otherLoanAmountField"
        label="Test"
        name="name"
        placeholder="Kwota obecnych zobowiązań finansowych"
        type="text"
        value=""
      />
      <span
        class="sc-dIsAE ccvseT"
      >
        PLN
      </span>
    </div>
  </form>
</div>
`;
